# Janjic_kurs_4

./: .gitignore  README.md  filtered_vacancy.json  main.py  pyproject.toml
src/: class_api.py  class_json.py  utils.py  vacancy.py
